...
                                <connections>
                                    <outlet property="delegate" destination="lGd-og-sJg" id="Y6r-65-o0m"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aIm-RY-Efa">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" label="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="UXH-b7-N3t"/>
                                    <constraint firstAttribute="width" constant="48" id="sil-g7-jUR"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="backNavigationImage"/>
...
                                    <constraint firstAttribute="height" constant="60" id="QXB-kj-753"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vI3-e1-MfU">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="3of-0t-42m"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" title="WebViewViewController" id="zu0-9W-PZs" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="FLU-vj-ZGm">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="hlj-Aa-vo9">
                                <rect key="frame" x="0.0" y="172" width="393" height="680"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aw8-Ey-RFC">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" label="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="onh-k6-Rck"/>
                                                        <constraint firstAttribute="width" constant="44" id="qzb-eI-T7f"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="No Active"/>
...
